fix emoji showing at header logo on mobile devices again; remove useless js; fix header justify-content on mobile

--- a/src/public/css/_header.scss
+++ b/src/public/css/_header.scss
@@ -187,3 +187,11 @@
     }
   }
 }
+
+@media (max-width: 460px) {
+  header {
+    .narrow-container {
+      justify-content: space-around;
+    }
+  }
+}
